--- a/style.css
+++ b/style.css
@@ -260,3 +260,51 @@ button{
     /* background: white; */
     color: rgb(255, 255, 255);
 }
+/* projects section */
+#projects2{
+    background: rgb(252, 250, 250);
+    height: auto;
+    width: 100%;
+    padding: 40px;
+    padding-top: 100px;
+
+}
+#projects2 h2,#pIntro{
+    line-height: 20px;
+    text-align: center;
+    padding-bottom: 30px;
+}
+.projectsHolder{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+}
+#first,#second,#third,#fourth{
+width: 400px;
+margin: 20px;
+}
+#first img,#second img,#third img,#fourth img{
+    width: 300px;
+    border-radius: 5px;
+    margin-left: 45px;
+    margin-top: 15px;
+}
+#first h3,#second h3,#third h3,#fourth h3{
+    padding: 20px;
+    line-height: 30px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+#first p,#second p,#third p,#fourth p{
+    padding: 20px;
+    padding-top: 5px;
+    line-height: 25px;
+}
+#first a,#second a,#third a,#fourth a{
+    text-decoration: none;
+    color: rgb(11, 139, 11);
+}
+#first a:hover,#second a:hover,#third a:hover,#fourth a:hover{
+    color: rgb(243, 16, 16);
+}
