--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
+body{
+    background: rgb(252, 250, 250);
+}
 /* the nav section */
 .navBar{
     width: 100%;
@@ -148,13 +151,13 @@ button{
 /* the about section */
 #aboutHolder{
     display: flex;
-    padding: 20px;
     padding-top: 100px;
     justify-content: space-between;
     width: 100%;
     height: auto;
     background: rgb(236, 236, 236);
     padding-bottom: 100px;
+    padding: 100px;
 }
 #aboutContent{
     height: auto;
@@ -307,4 +310,258 @@ margin: 20px;
 }
 #first a:hover,#second a:hover,#third a:hover,#fourth a:hover{
     color: rgb(243, 16, 16);
+}
+/* testimonial section */
+#testimonialHolder{
+    padding: 40px;
+    padding-top: 100px;
+    background: rgb(224, 224, 224);
+    width: 100%;
+}
+#testimonialHolder h2,#testimonialHolder p{
+    padding-bottom: 20px;
+    line-height: 20px;
+    text-align: center;
+    padding-left: 40px;
+}
+#testimonial{
+    background: rgb(255, 255, 255);
+    width: 550px;
+    padding: 20px;
+    margin: 0 auto;
+    height: 240px;
+    border-radius: 10px;
+}
+#testimonial h3{
+    padding-bottom:16px;
+    color: rgb(36, 173, 36);
+    padding-left: 39px;
+}
+#testimonial span{
+    color:rgb(223, 21, 21);
+}
+#testimonial img{
+    width: 100px;
+    border-radius: 100px;
+    margin-left: -70px;
+    margin-top: -100px;
+}
+#Tbtns{
+    width: 100%;
+    margin-left: 170px;
+}
+#testimonial button{
+    border-radius:3px;
+    width: 50px;
+    height:35px;
+    background:rgb(10, 10, 10);
+    font-size: 20px; 
+    color:rgb(250, 245, 245);
+    font-weight: bold;
+    margin-left: 20px;
+    padding: 5px;
+}
+#testimonial button:hover{
+    color: rgb(250, 9, 9);
+}
+/* team section */
+#teamHolder{
+    width: 100%;
+    height: auto;
+    background-color: rgb(248, 248, 248);
+    padding: 40px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+#teamHolder h2,#p1{
+    line-height: 25px;
+    text-align: center;
+    padding-bottom: 16px;
+}
+.team{
+    display: flex;
+    justify-content:space-between;
+}
+#ceo,#technical1,#technical2{
+    margin-top: 20px;
+    width: 360px;
+    height:auto;
+    background: rgb(231, 231, 231);
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgb(12, 12, 12);
+}
+#ceo h4,#ceo p,#technical1 h4,#technical1 p,#technical2 h4,#technical2 p{
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+#ceo p,#technical1 p,#technical2 p{
+    font-size: 16px;
+}
+#ceo img,#technical1 img,#technical2 img{
+    width: 300px;
+    margin-left: 30px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 50%;
+    height: 500px;
+}
+.icons{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: auto;
+}
+#img1 img,#img2 img,#img3 img,#img4 img{
+    width: 30px;
+    height: auto;
+}
+/* contacts section */
+#contactsHolder{
+    background:rgb(252, 251, 251) ;
+    width: 100%;
+    height: auto;
+    padding:50px;
+}
+#contacts{
+    padding-top: 100px;
+    display: flex;
+    max-width: 100%;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 80px;
+}
+#ContactImg img{
+border-radius: 20px;
+margin-right: 50px;
+}
+#contanctForm{
+margin-top: 20px;
+font-size: 18px;
+width: 500px;
+padding: 20px;
+}
+#contanctForm p{
+    line-height: 28px;
+    text-align: center;
+}
+#contanctForm h4{
+    padding-left: 20px;
+    color: rgb(18, 211, 18);
+    padding:10px;
+}
+#contanctForm form{
+    padding-left: 20px;
+}
+form input{
+    width: 90%;
+    padding: 11px;
+    margin-bottom: 20px;
+}
+#text{
+    max-width: auto;
+    height: 100px;
+    padding: 11;
+}
+#contanctForm button{
+    border-radius: 10px;
+    margin-left: 20px;
+    border: none;
+    font-size: 16px;
+    background:rgb(18, 211, 18);
+    cursor: pointer;
+}
+#contanctForm button:hover{
+    background: rgb(247, 6, 6);
+
+
+}
+/* footer section */
+#footerHolder{
+    width: 100%;
+    height: auto;
+    background: rgb(10, 10, 10);
+    color: rgb(252, 249, 249);
+    padding: 30px;
+    padding-top: 100px;
+    padding-bottom: 60px;
+}
+.footerContent{
+display: flex;
+justify-content: space-between;
+}
+#info{
+    width: 590px;
+}
+#info h4{
+    font-size: 20px;
+    padding-bottom: 13px;
+    color: rgb(19, 233, 19);
+    font-weight: bold;
+}
+#info p{
+    line-height: 25px;
+}
+#links ul{
+list-style: none;
+}
+#links ul li a{
+    text-decoration: none;
+    line-height: 24px;
+    color:rgb(58, 201, 29);
+}
+#links ul li a:hover{
+    color: rgb(233, 15, 15);
+}
+#links span{
+    font-size: 20px;
+    font-weight: bolder;
+    color: rgb(233, 15, 15);
+}
+#subscribe h4{
+    font-size: 19px;
+    padding-bottom: 15px;
+
+}
+#subscribe input{
+    padding: 10px;
+    width: 330px;
+    border-radius: 20px;
+    background: rgb(255, 255, 255);
+    border: none;
+}
+.subscribeInput{
+    display: flex;
+}
+.subscribeInput button{
+    padding: 9px;
+    border-radius: 20px;
+    background: rgb(240, 4, 4);
+    border: none;
+    margin-left:-60px;
+    height: 35px;
+    width: 100px;
+    color: rgb(3, 3, 3);
+    font-size: 15px;
+}
+.goldenIcons{
+    display: flex;
+}
+#Gimg1 img,#Gimg2 img,#Gimg3 img,#Gimg4 img{
+    width: 30px;
+    border-radius: 50px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.reveal{
+    position:relative;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: all 2000ms ease;
+}
+.reveal.active{
+    transform: translateX(0px);
+    opacity: 1;
+
 }
