--- a/style.css
+++ b/style.css
@@ -341,19 +341,21 @@ margin: 20px;
     height: 240px;
     border-radius: 10px;
 }
-#testimonial h3{
-    padding-bottom:16px;
+#testimonial h4{
     color: rgb(36, 173, 36);
-    padding-left: 39px;
 }
 #testimonial span{
     color:rgb(223, 21, 21);
 }
-#testimonial img{
-    width: 100px;
-    border-radius: 100px;
-    margin-left: -70px;
-    margin-top: -100px;
+#testimonial p{
+    font-size: 17px;
+    padding-top: 20px;
+}
+#image{
+    background:green;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
 }
 #Tbtns{
     width: 100%;
